<resources>
    <string name="app_name">Wisata Kawasan Sejarah</string>
    <string name="situs_sejarah">Situs Bersejarah</string>
    <string name="restaurant">Rumah Makan</string>
    <string name="fasilitas">Fasilitas</string>
    <string name="hotel">Penginapan</string>
    <string name="puzzle">Puzzle</string>
    <string name="quiz">Kuis</string>
    <string name="galery">Galeri</string>
    <string name="sumber">Sumber Elektronik</string>

    // quiz
    <string name="essay">Essai</string>
    <string name="multiple_choice">Pilihan Ganda</string>

    // Level
    <string name="easy">Mudah</string>
    <string name="medium">Sedang</string>
    <string name="hard">Sulit</string>
    <string name="level_not_avail">Maaf, Level ini belum tersedia</string>

    // Result
    <string name="repeat">Ulangi</string>
    <string name="beranda_menu">Menu Utama</string>
    <string name="quiz_menu">Menu Kuis</string>

    // status data
    <string name="quiz_not_avail">Quiz Not Available</string>


    // sample data
    <string name="sample">Sample Data</string>
    <string name="lorem_title">Lorem Ipsum</string>
    <string name="lorem_description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>

    <!-- status data -->

    <string name="successful">successful</string>
    <string name="please_complete_data">Harap isi data dengan lengkap</string>
    <string name="please_complete_data_message">Coba periksa kelengkapan data anda</string>
    <string name="data_not_available">Yah, data belum tersedia</string>
    <string name="data_not_available_message">Silahkan tambahkan data</string>
    <string name="note_empty">Tidak ada catatan</string>
    <string name="wrong_email_or_password">Email Atau Password Salah</string>

    <!-- status connection -->

    <string name="failed_connection">Yah, koneksi bermasalah</string>
    <string name="failed_connection_message">Coba sebentar lagi ya, Kami sedang memperbaikinya</string>
    <string name="disconnect">Yah, internetnya mati...</string>
    <string name="disconnect_message">Cek koneksi Wi-Fi atau kuota internetmu dan coba lagi ya.</string>


</resources>