<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".quiz.QuizResult"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:padding="@dimen/_20sdp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Skor Anda"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        android:textColor="@color/text_black_primary"/>

    <TextView
        android:id="@+id/totalScoreTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="80"
        android:textSize="@dimen/_50ssp"
        android:textStyle="bold"
        android:textColor="@color/text_color_primary"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/ulangCard"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_70sdp"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="@dimen/_3sdp"
        android:layout_margin="@dimen/_10sdp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10sdp"
            android:text="@string/repeat"
            android:gravity="center"
            style="@style/text_item"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/berandaCard"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_70sdp"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="@dimen/_3sdp"
        android:layout_margin="@dimen/_10sdp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10sdp"
            android:text="@string/beranda_menu"
            android:gravity="center"
            style="@style/text_item"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/quizCard"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_70sdp"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="@dimen/_3sdp"
        android:layout_margin="@dimen/_10sdp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10sdp"
            android:text="@string/quiz_menu"
            android:gravity="center"
            style="@style/text_item"/>

    </androidx.cardview.widget.CardView>

</LinearLayout>