<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_budha"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:padding="@dimen/_10sdp">

        <ImageView
            android:id="@+id/aboutBtn"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/circle_white"
            android:src="@mipmap/ic_logo_history_foreground"
            android:layout_gravity="center|right"/>

    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Wisata Kawasan "
            android:gravity="left"
            android:textSize="@dimen/_35sdp"
            android:textColor="@android:color/white"
            style="@style/text_title_main"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sejarah"
            android:gravity="left"
            android:textStyle="bold"
            android:textSize="@dimen/_35sdp"
            android:textColor="@android:color/white"
            style="@style/text_title_main" />

    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/hotelCard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_30sdp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingRight="@dimen/_10sdp"
            android:paddingLeft="@dimen/_10sdp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_120sdp"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginBottom="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_20sdp">

                <LinearLayout
                    android:id="@+id/siteCard"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:background="@drawable/btn_yellow"
                    >

                    <ImageView
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:src="@drawable/history"
                        android:layout_marginTop="@dimen/_10sdp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_10sdp"
                        android:text="@string/situs_sejarah"
                        android:gravity="center"
                        style="@style/text_title_icon"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/restaurantCard"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:background="@drawable/btn_yellow"
                    >

                    <ImageView
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:src="@drawable/market"
                        android:layout_marginTop="@dimen/_10sdp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_10sdp"
                        android:text="@string/fasilitas"
                        android:gravity="center"
                        style="@style/text_title_icon"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_120sdp"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/quizCard"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:background="@drawable/btn_yellow"
                    >

                    <ImageView
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:src="@drawable/quiz"
                        android:layout_marginTop="@dimen/_10sdp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_10sdp"
                        android:text="@string/quiz"
                        android:gravity="center"
                        style="@style/text_title_icon"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ebookCard"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:background="@drawable/btn_yellow"
                    >

                    <ImageView
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:src="@drawable/book"
                        android:layout_marginTop="@dimen/_10sdp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_10sdp"
                        android:text="@string/sumber"
                        android:gravity="center"
                        style="@style/text_title_icon"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>